Adiciona Views Edit/Details Grid de noticias do News/Index

--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Details.cshtml
@@ -1,7 +1,55 @@
-﻿
+﻿@model  ProjetoBRQ.Models.News
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Informações</h3>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-5">
+                <table class="table table-bordered table-condensed table-condensed table-hover ">
+                    <tr>
+                        <td>
+                            <b>@Html.LabelFor(x => x.Title)</b>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(x => x.Title)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <b>@Html.LabelFor(x => x.Description)</b>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(x => x.Description)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <b>@Html.LabelFor(x => x.Body)</b>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(x => x.Body)
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-md-5">
+                @if (Model.ImgNews != null)
+                {
+                    <img src="@Model.ImgNews.FirstOrDefault().Base64Image()">
+                }
+                else
+                {
+                    <img src="">
+                }
+            </div>
+        </div>
+    </div>
+    <a href="@Url.Action("Edit","News", new { Id = Model.Id })">Edit</a>
+</div>
 
