--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Edit.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Edit.cshtml
@@ -4,19 +4,19 @@
     ViewBag.Title = "Create";
 }
 
-@using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Title)
-        @Html.TextBoxFor(m => m.Title, new { @class="form-control" })
+        @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Description)
-        @Html.TextBoxFor(m => m.Description, new { @class="form-control" })
+        @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Body)
-        @Html.TextAreaFor(m => m.Body, new { @class="form-control" })
+        @Html.TextAreaFor(m => m.Body, new { @class = "form-control" })
     </div>
 
     <input type="file" name="File" id="File">
@@ -25,13 +25,22 @@
 }
 <div id="file-content"></div>
 <h2>Create</h2>
+
+@if ((Model.ImgNews != null) && Model.ImgNews.FirstOrDefault() != null)
+{
+    <img src="@Model.ImgNews.FirstOrDefault().Base64Image()" height="200" id="pw" alt="Prévia da imagem...">
+}
+else
+{
+    <img src="" height="200" id="pw" alt="Prévia da imagem...">
+}
+
 <img src="" height="200" id="pw" alt="Prévia da imagem...">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $('#File').change(function () { previewFile() });
 
     function previewFile() {
-        var preview = document.getElementById('pw'); 
+        var preview = document.getElementById('pw');
         var file = document.getElementById('File').files[0];
         var reader = new FileReader();
 
