--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
@@ -3,42 +3,80 @@
     ViewBag.Title = "Index";
 }
 
+<style>
+    .paged{
+        border: 1px solid black;
+        padding: 3px;
+    }
+
+</style>
+
 <div id="content" class="col-md-12">
     <i id="load" class="fa fa-spinner fa-spin text-center" style="font-size:54px"></i>
 </div>
+<div id="page"></div>
 <script>
     $.ajax({
         type: "GET",
         url: "@Url.Action("TableIndex", "News")",
         dataType: "json",
         success: function (data) {
-            var table = '<table class="table table-bordered table-hover table-striped">';
-
-            table += '<tr>';
-            table += '<td><b>Código</b></td>';
-            table += '<td><b>Titulo</b></td>';
-            table += '<td><b>Descrição</b></td>';
-            table += '<td><b>Ações</b></td>';
-            table += '</tr>';
-            
-            for (var i = 0; i < data.list.length; i++) {
-                table += '<tr>';
-                table += `<td> ${data.list[i].Id}</td>`;
-                table += `<td> ${data.list[i].Title}</td>`;
-                table += `<td> ${data.list[i].Description}</td>`;
-                table += '<td>'
-                table += `<a href="@Url.Action("Details","News")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-                table += `<a href="@Url.Action("Edit","News")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-                table += `<a href="@Url.Action("Delete","News")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`
-                table += `<a href="@Url.Action("Preview","News")/${data.list[i].Id}"><i class="fa fa-newspaper-o" aria-hidden="true" style='color:black'></i></a>`
-                table += '</td>'; 
-                table += '</tr>'
-            }
-            table+= '</table>'
-            $('#content').append(table);
+            createTable(data);
+            createPaged(data);
             $('#load').css('display', 'none');
         }
-    })
+    });
+
+    $(document).on('click', '.paged', function () {
+        var id = $(this).attr('id').split('-')[1];
+        $("#table").remove();
+        $('#load').css('display', 'inline-block');
+        $.ajax({
+            type: "GET",
+            url: `@Url.Action("TableIndex", "News")?Page=${id}`,
+            dataType: "json",
+            success: function (data) {
+                createTable(data);
+                $('#load').css('display', 'none');
+            }
+        });
+    });
+
+    function createPaged(data) {
+        var html = '';
+
+        for (var i = 1; i <= data.countPages; i++) {
+            html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+        }
+        $('#page').append(html);
+    }
+
+    function createTable(data) {
+        var table = '<table id="table" class="table table-bordered table-hover table-striped">';
+        table += '<tr>';
+        table += '<td><b>Código</b></td>';
+        table += '<td><b>Titulo</b></td>';
+        table += '<td><b>Descrição</b></td>';
+        table += '<td><b>Ações</b></td>';
+        table += '</tr>';
+
+        for (var i = 0; i < data.list.length; i++) {
+            table += '<tr>';
+            table += `<td> ${data.list[i].Id}</td>`;
+            table += `<td> ${data.list[i].Title}</td>`;
+            table += `<td> ${data.list[i].Description}</td>`;
+            table += '<td>'
+            table += `<a href="@Url.Action("Details","News")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Edit","News")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Delete","News")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`
+            table += `<a href="@Url.Action("Preview","News")/${data.list[i].Id}"><i class="fa fa-newspaper-o" aria-hidden="true" style='color:black'></i></a>`
+            table += '</td>';
+            table += '</tr>'
+        }
+        table += '</table>';
+        $('#content').append(table);
+    }
+
 </script>
 
 <h2>Index</h2>
