--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
@@ -6,17 +6,22 @@
 
 @using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Title)
         @Html.TextBoxFor(m => m.Title, new { @class="form-control" })
+        @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger"})
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Description)
         @Html.TextBoxFor(m => m.Description, new { @class="form-control" })
+        @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Body)
         @Html.TextAreaFor(m => m.Body, new { @class="form-control" })
+        @Html.ValidationMessageFor(m => m.Body, "", new { @class = "text-danger" })
     </div>
 
     <input type="file" name="File" id="File">
