--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Create.cshtml
@@ -29,11 +29,19 @@
     <button class="btn btn-default" type="submit">Submeter</button>
 }
 <div id="file-content"></div>
-<h2>Create</h2>
 <img src="" height="200" id="pw" alt="Prévia da imagem...">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
 <script>
+    tinymce.init({ selector: 'textarea' });
     $('#File').change(function () { previewFile() });
+
+    $(function () {
+        $('#Body').froalaEditor({
+            iframe:true
+        })
+    });
 
     function previewFile() {
         var preview = document.getElementById('pw'); 
