--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjetoBRQ.Models.News>
+﻿@model  ProjetoBRQ.Models.News
 @{
     ViewBag.Title = "Index";
 }
@@ -12,28 +12,63 @@
 </style>
 
 <div id="content" class="col-md-12">
+    <table id="table" class="table table-bordered table-hover table-striped">
+        <tr>
+            <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
+            <td>@Html.TextBoxFor(m => m.Title, new { @class = "form-control" })</td>
+        </tr>
+        <tr id="head">
+            <td>@Html.LabelFor(m => m.Id)</td>
+            <td>@Html.LabelFor(m => m.Title)</td>
+            <td>@Html.LabelFor(m => m.Description)</td>
+            <td>Ações</td>
+        </tr>
+    </table>
     <i id="load" class="fa fa-spinner fa-spin text-center" style="font-size:54px"></i>
 </div>
 <div id="page"></div>
 <script>
-    $.ajax({
-        type: "GET",
-        url: "@Url.Action("TableIndex", "News")",
-        dataType: "json",
-        success: function (data) {
-            createTable(data);
-            createPaged(data);
-            $('#load').css('display', 'none');
-        }
+
+    $('#Id').keypress(function (e) {
+        enterPress(e);
     });
 
+    $('#Title').keypress(function (e) {
+        enterPress(e);
+    });
+
+    function enterPress(e) {
+        if (e.which == 13) {
+            initTable();
+            $(this).blur();
+        }
+    }
+
+    initTable()
+
+    function initTable() {
+        $(".dynamic").remove();
+        $(".paged").remove();
+        $.ajax({
+            type: "GET",
+            url: `@Url.Action("TableIndex", "News")?Page=null&Id=${$('#Id').val()}&Title=${$("#Title").val()}`,
+            dataType: "json",
+            success: function (data) {
+                createTable(data);
+                createPaged(data);
+                $('#load').css('display', 'none');
+            }
+        });
+    }
+
     $(document).on('click', '.paged', function () {
+
         var id = $(this).attr('id').split('-')[1];
-        $("#table").remove();
+        $(".dynamic").remove();
         $('#load').css('display', 'inline-block');
         $.ajax({
             type: "GET",
-            url: `@Url.Action("TableIndex", "News")?Page=${id}`,
+            url: `@Url.Action("TableIndex", "News")?Page=${id}&Id=${$('#Id').val()}&Title=${$("#Title").val()}`,
             dataType: "json",
             success: function (data) {
                 createTable(data);
@@ -51,17 +86,12 @@
         $('#page').append(html);
     }
 
+
     function createTable(data) {
-        var table = '<table id="table" class="table table-bordered table-hover table-striped">';
-        table += '<tr>';
-        table += '<td><b>Código</b></td>';
-        table += '<td><b>Titulo</b></td>';
-        table += '<td><b>Descrição</b></td>';
-        table += '<td><b>Ações</b></td>';
-        table += '</tr>';
+        var table = '';
 
         for (var i = 0; i < data.list.length; i++) {
-            table += '<tr>';
+            table += '<tr class="dynamic">';
             table += `<td> ${data.list[i].Id}</td>`;
             table += `<td> ${data.list[i].Title}</td>`;
             table += `<td> ${data.list[i].Description}</td>`;
@@ -73,8 +103,8 @@
             table += '</td>';
             table += '</tr>'
         }
-        table += '</table>';
-        $('#content').append(table);
+
+        $('#table').append(table);
     }
 
 </script>
