CRUD Cliente/Contato

--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
@@ -10,7 +10,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-5">
-                <table class="table table-bordered table-condensed table-condensed table-hover ">
+                <table class="table table-bordered table-condensed table-hover ">
                     <tr>
                         <td>
                             <b>@Html.LabelFor(m => m.Nome)</b>
