--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@model ProjetoBRQ.Models.Cliente
+﻿@model ProjetoBRQ.Models.Contatos
 @{
     ViewBag.Title = "Index";
 }
-
 <style>
     .paged {
         border: 1px solid black;
@@ -13,14 +12,12 @@
 <div id="content" class="col-md-12">
     <table id="table" class="table table-bordered table-hover table-striped">
         <tr>
-            <td>@Html.TextBoxFor(m => m.Id, new { @class="form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Cpf, new { @class = "form-control" })</td>
+            <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
             <td>@Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })</td>
             <td>@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })</td>
         </tr>
         <tr id="head">
             <td>@Html.LabelFor(m => m.Id)</td>
-            <td>@Html.LabelFor(m => m.Cpf)</td>
             <td>@Html.LabelFor(m => m.Nome)</td>
             <td>@Html.LabelFor(m => m.Email)</td>
             <td>Ações</td>
@@ -30,12 +27,9 @@
 </div>
 <div id="page"></div>
 <script>
+
     initTable()
     $('#Id').keypress(function (e) {
-        enterPress(e);
-    });
-
-    $('#Cpf').keypress(function (e) {
         enterPress(e);
     });
 
@@ -70,12 +64,12 @@
         }
     }
 
-    function initTable() {
+   function initTable() {
         $(".dynamic").remove();
         $(".paged").remove();
         $.ajax({
             type: "GET",
-            url: `@Url.Action("TableIndex", "Clientes")?Page=null&Id=${$('#Id').val()}&Cpf=${$("#Cpf").val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
+            url: `@Url.Action("TableIndex", "Contatos")?Page=null&Id=${$('#Id').val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
             dataType: "json",
             success: function (data) {
                 createTable(data);
@@ -84,7 +78,6 @@
             }
         });
     }
-
 
     function createPaged(data) {
         var html = '';
@@ -100,19 +93,17 @@
         for (var i = 0; i < data.list.length; i++) {
             table += '<tr class="dynamic">';
             table += `<td> ${data.list[i].Id}</td>`;
-            table += `<td> ${data.list[i].Cpf}</td>`;
             table += `<td> ${data.list[i].Nome}</td>`;
             table += `<td> ${data.list[i].Email}</td>`;
             table += '<td>';
-            table += `<a href="@Url.Action("Details","Clientes")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-            table += `<a href="@Url.Action("Edit", "Clientes")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-            table += `<a href="@Url.Action("Delete", "Clientes")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Details","Contatos")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Edit", "Contatos")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Delete", "Contatos")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
             table += '</td>';
             table += '</tr>';
         }
         $('#table').append(table);
     }
 </script>
-
 <h2>Index</h2>
 
