--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -2,30 +2,40 @@
 @{
     ViewBag.Title = "Index";
 }
-<style>
-    .paged {
-        border: 1px solid black;
-        padding: 3px;
-    }
-</style>
+<link href="~/Content/TablesStyle.css" type="text/css" rel="stylesheet"/>
 
-<div id="content" class="col-md-12">
-    <table id="table" class="table table-bordered table-hover table-striped">
-        <tr>
-            <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })</td>
-        </tr>
-        <tr id="head">
-            <td>@Html.LabelFor(m => m.Id)</td>
-            <td>@Html.LabelFor(m => m.Nome)</td>
-            <td>@Html.LabelFor(m => m.Email)</td>
-            <td>Ações</td>
-        </tr>
-    </table>
-    <i id="load" class="fa fa-spinner fa-spin text-center" style="font-size:54px"></i>
+<div class="container">
+    <h2>Contatos</h2>
+    <div id="content" class="col-md-12">
+        <table id="table" class="bordered">
+            <tr>
+                <td>@Html.TextBoxFor(m => m.Id, new { @placeholder = "Pesquisar por ID" })</td>
+                <td>@Html.TextBoxFor(m => m.Nome, new { @placeholder = "Pesquisar por Nome" })</td>
+                <td>@Html.TextBoxFor(m => m.Email, new { @placeholder = "Pesquisar por E-mail" })</td>
+            </tr>
+            <tr id="head">
+                <td>@Html.LabelFor(m => m.Id)</td>
+                <td>@Html.LabelFor(m => m.Nome)</td>
+                <td>@Html.LabelFor(m => m.Email)</td>
+                <td>Ações</td>
+            </tr>
+        </table>
+
+        <div class="preloader-wrapper big active centered" id="load">
+            <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div>
+            </div>
+        </div>
+
+
+        @*<i id="load" class="fa fa-spinner fa-spin text-center" style="font-size:54px"></i>*@
+    </div>
+    <div id="page">
+        <ul class="pagination" id="ulPage"></ul>
+    </div>
 </div>
-<div id="page"></div>
 <script>
 
     initTable()
@@ -41,9 +51,11 @@
         enterPress(e);
     });
 
-    $(document).on('click', '.paged', function () {
+    $(document).on('click', '.eoq', function () {
 
         var id = $(this).attr('id').split('-')[1];
+
+        $('li').removeClass('active');
         $(".dynamic").remove();
         $('#load').css('display', 'inline-block');
         $.ajax({
@@ -55,6 +67,7 @@
                 $('#load').css('display', 'none');
             }
         });
+        $('#paged-' + id).parent().addClass('active');
     });
 
     function enterPress(e) {
@@ -66,7 +79,8 @@
 
    function initTable() {
         $(".dynamic").remove();
-        $(".paged").remove();
+        //$(".paged").remove();
+        $(".eoq").remove();
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "Contatos")?Page=null&Id=${$('#Id').val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
@@ -83,9 +97,16 @@
         var html = '';
 
         for (var i = 1; i <= data.countPages; i++) {
-            html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+            //html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+            if (i == 1) {
+                html += `<li class="waves-effect active"><a class='eoq' href='#' id="paged-${i}">${i}</a></li>`;
+            } else {
+                html += `<li class="waves-effect"><a class='eoq' href='#' id="paged-${i}">${i}</a></li>`;
+            }
         }
-        $('#page').append(html);
+
+        $('#ulPage').append(html);
+        //$('#page').append(html);
     }
 
     function createTable(data) {
@@ -96,14 +117,18 @@
             table += `<td> ${data.list[i].Nome}</td>`;
             table += `<td> ${data.list[i].Email}</td>`;
             table += '<td>';
-            table += `<a href="@Url.Action("Details","Contatos")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Details", "Contatos")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>info</i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Edit", "Contatos")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>create</i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Delete", "Contatos")/${data.list[i].Id}"><i class="material-icons" aria-hidden="true" style='color:black'>delete</i></a>&nbsp&nbsp`
+
+            @*table += `<a href="@Url.Action("Details","Contatos")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
             table += `<a href="@Url.Action("Edit", "Contatos")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-            table += `<a href="@Url.Action("Delete", "Contatos")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Delete", "Contatos")/${data.list[i].Id}"><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;*@
             table += '</td>';
             table += '</tr>';
         }
         $('#table').append(table);
     }
 </script>
-<h2>Index</h2>
+
 
