--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                     <p class="cinza-maroto">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
                 </div>
                 <div class="col l3 s12">
-                    <h5 class="cinza-maroto">Settings</h5>
+                    <h5 class="cinza-maroto">Grupo</h5>
                     <ul>
                         <li><a class="cinza-maroto" href="#!">Giovanni Gualiato</a></li>
                         <li><a class="cinza-maroto" href="#!">Caio Willian</a></li>
