--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
+<body class="indigo lighten-5">
     <nav class="indigo accent-3" role="navigation">
         <div class="nav-wrapper container">
             <div>
