--- a/ProjetoBRQ/ProjetoBRQ/Views/Account/Register.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Account/Register.cshtml
@@ -3,38 +3,37 @@
     ViewBag.Title = "Registre-se";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="container">
+    <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Crie uma nova conta.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h5>Crie uma nova conta.</h5>
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="input-field">
+            @Html.LabelFor(m => m.Email)
+            @Html.TextBoxFor(m => m.Email, new { @type = "email", @class = "validate" })
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="input-field">
+            @Html.LabelFor(m => m.Password)
+            @Html.PasswordFor(m => m.Password, new { @class = "validate" })
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="input-field">
+            @Html.LabelFor(m => m.ConfirmPassword)
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "validate" })
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registrar-se" />
+        <div class="input-field">           
+                <button class="btn waves-effect waves-light" type="submit" name="action">
+                    Registrar-se
+                    <i class="material-icons right">send</i>
+                </button>
+                @*<input type="submit" class="btn btn-default" value="Registrar-se" />*@         
         </div>
-    </div>
-}
+    }
+</div>
+<br />
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
