--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Create.cshtml
@@ -2,43 +2,44 @@
 @{
     ViewBag.Title = "Create";
 }
+<div class="container">
+    <h2>Cadastrar Cliente</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Nome)
-        @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Cpf)
-        @Html.TextBoxFor(m => m.Cpf, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Cpf, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Telefone)
-        @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Endereco)
-        @Html.TextBoxFor(m => m.Endereco, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Endereco, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Complemento)
-        @Html.TextAreaFor(m => m.Complemento, new { @class = "form-control" })
-    </div>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="input-field">
+            @Html.LabelFor(m => m.Nome)
+            @Html.TextBoxFor(m => m.Nome, new { @class = "validate" })
+            @Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
+        </div>
+        <div class="input-field">
+            @Html.LabelFor(m => m.Cpf)
+            @Html.TextBoxFor(m => m.Cpf, new { @class = "validate" })
+            @Html.ValidationMessageFor(m => m.Cpf, "", new { @class = "text-danger" })
+        </div>
+        <div class="input-field">
+            @Html.LabelFor(m => m.Email)
+            @Html.TextBoxFor(m => m.Email, new { @class = "validate" })
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+        <div class="input-field">
+            @Html.LabelFor(m => m.Telefone)
+            @Html.TextBoxFor(m => m.Telefone, new { @class = "validate" })
+            @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
+        </div>
+        <div class="input-field">
+            @Html.LabelFor(m => m.Endereco)
+            @Html.TextBoxFor(m => m.Endereco, new { @class = "validate" })
+            @Html.ValidationMessageFor(m => m.Endereco, "", new { @class = "text-danger" })
+        </div>
+        <div class="input-field">
+            @Html.LabelFor(m => m.Complemento)
+            @Html.TextAreaFor(m => m.Complemento, new { @class = "form-control" })
+        </div>
 
-    <input type="submit" class="btn btn-default" value="Cadastrar Cliente"/>
-}
-
-<h2>Create</h2>
+        <input type="submit" class="btn btn-default" value="Cadastrar Cliente" />
+    }
+</div>
 
