--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
@@ -10,8 +10,18 @@
     <div id="content" class="col-md-12">
         <table id="table" class="bordered">
             <tr>
-                <td>@Html.TextBoxFor(m => m.Id, new{ @placeholder = "Pesquisar por ID"})</td>
-                <td>@Html.TextBoxFor(m => m.Title, new { @placeholder = "Pesquisar por Titulo"})</td>
+                <td>
+                    <div class="input-field">
+                        <i class="material-icons prefix">search</i>                    
+                        @Html.TextBoxFor(m => m.Id, new { @placeholder = "Pesquisar por ID" })
+                    </div>
+                </td>
+                <td>
+                    <div class="input-field">
+                        <i class="material-icons prefix">search</i>
+                        @Html.TextBoxFor(m => m.Title, new { @placeholder = "Pesquisar por Titulo" })
+                    </div>
+               </td>
             </tr>
             <tr id="head">
                 <td>@Html.LabelFor(m => m.Id)</td>
@@ -67,8 +77,7 @@
             }
         });
     }
-
-    //$(document).on('click', '.paged', function () {
+    
     $(document).on('click', '.eoq', function () {
 
         var id = $(this).attr('id').split('-')[1];
@@ -99,11 +108,9 @@
                 html += `<li class="waves-effect"><a class='eoq' href='#' id="paged-${i}">${i}</a></li>`;
             }
         }
-        $('#ulPage').append(html);
-        //$('#page').append(html);
+        $('#ulPage').append(html);        
     }
-
-
+    
     function createTable(data) {
         var table = '';
 
@@ -123,7 +130,7 @@
 
         $('#table').append(table);
     }
-
+    
 </script>
 
 
