--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     <h2>Contatos</h2>
 
-    <div id="content" class="col-md-12">
+    <div id="content" class="col m12">
         <table id="table" class="bordered">
             <tr>
                 <td>
