--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Create.cshtml
@@ -39,7 +39,12 @@
             @Html.TextAreaFor(m => m.Complemento, new { @class = "form-control" })
         </div>
 
-        <input type="submit" class="btn btn-default" value="Cadastrar Cliente" />
+        <div class="input-field">
+            <button class="btn waves-effect waves-light" type="submit">
+                Cadastrar Cliente
+                <i class="material-icons right">send</i>
+            </button>
+        </div>        
     }
 </div>
 
