--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Details.cshtml
@@ -3,42 +3,38 @@
     ViewBag.Title = "Details";
 }
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3>Informações</h3>
-    </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-5">
-                <table class="tbale table-bordered table-condensed table-hover">
+<div class="container">
+    <h2>Informações do contato</h2>
+    <a href="@Url.Action("Index","Contatos")">Listar contatos</a>
+    <br />
+    <div class="row">
+        <div class="col m5">
+            <table class="bordered">
+                <tr>
+                    <td>@Html.LabelFor(m => m.Nome)</td>
+                    <td>@Html.DisplayFor(m => m.Nome)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.Email)</td>
+                    <td>@Html.DisplayFor(m => m.Email)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.Telefone)</td>
+                    <td>@Html.DisplayFor(m => m.Telefone)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.DataCadastro)</td>
+                    <td>@Html.DisplayFor(m => m.DataCadastro)</td>
+                </tr>
+                @if (Model.DataAlteracao != null)
+                {
                     <tr>
-                        <td>@Html.LabelFor(m => m.Nome)</td>
-                        <td>@Html.DisplayFor(m => m.Nome)</td>
+                        <td>@Html.LabelFor(m => m.DataAlteracao)</td>
+                        <td>@Html.DisplayFor(m => m.DataAlteracao)</td>
                     </tr>
-                    <tr>
-                        <td>@Html.LabelFor(m => m.Email)</td>
-                        <td>@Html.DisplayFor(m => m.Email)</td>
-                    </tr>
-                    <tr>
-                        <td>@Html.LabelFor(m => m.Telefone)</td>
-                        <td>@Html.DisplayFor(m => m.Telefone)</td>
-                    </tr>
-                    <tr>
-                        <td>@Html.LabelFor(m => m.DataCadastro)</td>
-                        <td>@Html.DisplayFor(m => m.DataCadastro)</td>
-                    </tr>
-                    @if (Model.DataAlteracao != null)
-                    {
-                        <tr>
-                            <td>@Html.LabelFor(m => m.DataAlteracao)</td>
-                            <td>@Html.DisplayFor(m => m.DataAlteracao)</td>
-                        </tr>
-                    }
-                </table>
-            </div>
+                }
+            </table>
         </div>
     </div>
 </div>
-
-<h2>Details</h2>
 
