--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -12,7 +12,19 @@
 
     <title>@ViewBag.Title - Meu Aplicativo ASP.NET</title>
     @*@Styles.Render("~/Content/css")*@
-    @Scripts.Render("~/bundles/modernizr")
+    @*@Scripts.Render("~/bundles/modernizr")*@
+
+    <style>
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+
+        .main {
+            flex: 1 0 auto;
+        }
+    </style>
 
 </head>
 <body class="indigo lighten-5">
@@ -39,13 +51,11 @@
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         </div>
     </nav>
+    <div class="main">
+        @RenderBody()
+    </div>
 
-
-    @RenderBody()
-    @*<div class="container body-content">
-            @RenderBody()
-            <hr />
-        </div>*@
+    
 
     <footer class="page-footer indigo accent-3">
         <div class="container">
@@ -79,7 +89,7 @@
     <script src="~/Content/materialize/js/init.js"></script>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
